re-export multisig hex on create multisig tx or open dispute